--- a/src/app/components/page-sections/footer/footer.component.html
+++ b/src/app/components/page-sections/footer/footer.component.html
@@ -58,7 +58,7 @@
                   <input formControlName="email" class="block w-full rounded-lg border border-gray-300 bg-white p-3 text-sm text-gray-900 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500 sm:w-96 lg:w-full" placeholder="Enter your email address" type="email" id="email" required="" />
                 </div>
                 <div >
-                  <button type="submit" class="text-white bg-gradient-to-br from-red-500 via-red-600 to-pink-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-3 text-center">Subscribe</button>
+                  <button type="submit" class="text-white bg-gradient-to-br from-red-500 via-red-600 to-pink-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-3 text-center disabled:opacity-50">Subscribe</button>
                 </div>
               </div>
             </form>
