--- a/src/app/components/page-sections/hero-section/hero-section.component.html
+++ b/src/app/components/page-sections/hero-section/hero-section.component.html
@@ -14,7 +14,13 @@
             </button>
         </div>
         <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-            <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/hero/phone-mockup.png" alt="mockup">
-        </div>                
+            <img src="assets/images/GalileoSatellite.png" 
+                alt="Galileo Satellite"
+                class="object-contain w-auto h-auto max-w-full max-h-full scale-150">
+        </div>
+                       
     </div>
 </section>
+
+
+
